--- a/FrotiX.Site.OLD/Pages/Ocorrencia/Ocorrencias.cshtml
+++ b/FrotiX.Site.OLD/Pages/Ocorrencia/Ocorrencias.cshtml
@@ -598,16 +598,12 @@
 
                     <div class="mb-3">
                         <label class="form-label fw-bold">Descrição Detalhada</label>
-                        <ejs-richtexteditor id="rteOcorrencias" locale="pt-BR" height="200px">
-                            <e-richtexteditor-insertimagesettings saveUrl="api/OcorrenciaViagem/UploadImagem" path="./uploads/ocorrencias/"></e-richtexteditor-insertimagesettings>
-                        </ejs-richtexteditor>
+                        <textarea id="rteOcorrencias" name="rteOcorrencias" style="width: 100%; height: 200px;"></textarea>
                     </div>
 
                     <div class="mb-3">
                         <label class="form-label fw-bold">Solução / Observações</label>
-                        <ejs-richtexteditor id="rteSolucao" locale="pt-BR" height="200px">
-                            <e-richtexteditor-insertimagesettings saveUrl="api/OcorrenciaViagem/UploadImagem" path="./uploads/ocorrencias/"></e-richtexteditor-insertimagesettings>
-                        </ejs-richtexteditor>
+                        <textarea id="rteSolucao" name="rteSolucao" style="width: 100%; height: 200px;"></textarea>
                     </div>
 
                     <div class="mb-3">
