--- a/FrotiX.Site.OLD/Pages/Abastecimento/RegistraCupons.cshtml
+++ b/FrotiX.Site.OLD/Pages/Abastecimento/RegistraCupons.cshtml
@@ -105,13 +105,7 @@
         ListaTblCupons(URLapi, IDapi);
     }
 
-    //Ajusta funcionamento do RTE no Modal
-    //====================================
-    var defaultRTE;
 
-    function onCreate() {
-        defaultRTE = this;
-    }
 </script>
 
 <form>
@@ -211,9 +205,7 @@
                                 <div class="control-wrapper">
                                     <div>
                                         <label class="label font-weight-bold">Observações a respeito do Registro de Cupons</label>
-                                        <ejs-richtexteditor id="rte" toolbarClick="toolbarClick" locale="pt-BR" height="150px" created="onCreate">
-                                            <e-richtexteditor-insertimagesettings saveUrl="api/Viagem/SaveImage" path="./DadosEditaveis/ImagensViagens/"></e-richtexteditor-insertimagesettings>
-                                        </ejs-richtexteditor>
+                                        <textarea id="rte" name="rte" placeholder="Observações..." style="width: 100%; height: 150px;"></textarea>
                                     </div>
                                 </div>
                             </div>
@@ -613,7 +605,13 @@
             //Cria DIV do PDF
             $("#PDFContainer").append("<div id='pdfViewer'> </div>");
 
-            defaultRTE.refreshUI();
+            // [KENDO] Inicializar Kendo Editor se ainda não existe
+            if (!$("#rte").data("kendoEditor")) {
+                $("#rte").kendoEditor({
+                    tools: ["bold","italic","underline","strikethrough","separator","justifyLeft","justifyCenter","justifyRight","justifyFull","separator","insertUnorderedList","insertOrderedList","separator","indent","outdent","separator","createLink","unlink","separator","fontName","fontSize","separator","foreColor","backColor","separator","cleanFormatting","separator","viewHtml"],
+                    resizable: { content: true, toolbar: false }
+                });
+            }
 
             var button = $(event.relatedTarget); // button the triggered modal
             var RegistroId = button.data("id");
@@ -628,8 +626,8 @@
                     var RegistroPDF = data.registroPDF;
                     var Observacoes = data.observacoes;
 
-                    var rte = document.getElementById('rte').ej2_instances[0];
-                    rte.value = Observacoes;
+                    var kendoEditor = $("#rte").data("kendoEditor");
+                    if (kendoEditor) kendoEditor.value(Observacoes || "");
 
                     var pdfViewer = $("#pdfViewer").kendopdfViewer({
                         pdfjsProcessing: {
@@ -645,8 +643,8 @@
                 }
             });
         }).on("hide.bs.modal", function (event) {
-            var rte = document.getElementById('rte').ej2_instances[0];
-            rte.value = '';
+            var kendoEditor = $("#rte").data("kendoEditor");
+            if (kendoEditor) kendoEditor.value("");
 
             document.getElementById("txtDataRegistro").value = "";
 
