--- a/FrotiX.Site.OLD/Pages/Manutencao/Upsert.cshtml
+++ b/FrotiX.Site.OLD/Pages/Manutencao/Upsert.cshtml
@@ -719,9 +719,7 @@
                     </div>
 
                     <label class="fw-bold">Descrição do Item</label>
-                    <ejs-richtexteditor id="rteManutencao" created="onCreate" locale="pt-BR" height="200px">
-                        <e-richtexteditor-insertimagesettings saveUrl="api/Viagem/SaveImage" path="./DadosEditaveis/ImagensOcorrencias/"></e-richtexteditor-insertimagesettings>
-                    </ejs-richtexteditor>
+                    <textarea id="rteManutencao" name="rteManutencao" placeholder="Descrição do item de manutenção..." style="width: 100%; height: 200px;"></textarea>
 
                     <div class="row g-4">
                         <div class="col-12">
