--- a/FrotiX.Site.OLD/Pages/Multa/UpsertPenalidade.cshtml
+++ b/FrotiX.Site.OLD/Pages/Multa/UpsertPenalidade.cshtml
@@ -651,9 +651,7 @@
 									<div class="control-wrapper">
 										<div>
 											<label class="label font-weight-bold">Observações a respeito da Multa</label>
-											<ejs-richtexteditor ejs-for="@Model.MultaObj.Multa.Observacao" id="rte" toolbarClick="toolbarClick" locale="pt-BR" height="150px">
-												<e-richtexteditor-insertimagesettings saveUrl="api/Viagem/SaveImage" path="./DadosEditaveis/ImagensViagens/"></e-richtexteditor-insertimagesettings>
-											</ejs-richtexteditor>
+											<textarea id="rte" name="MultaObj.Multa.Observacao" style="width: 100%; height: 150px;">@(Model.MultaObj?.Multa?.Observacao ?? "")</textarea>
 											<div id="errorMessage">
 												<span asp-validation-for="@Model.MultaObj.Multa.Observacao"></span>
 											</div>
@@ -1071,5 +1069,17 @@
 				Alerta.TratamentoErroComLinha("UpsertPenalidade.cshtml", "DOMContentLoaded-Spinners", error);
 			}
 		});
+	<script>
+		// [KENDO] Inicialização do Kendo Editor para Observações da Multa
+		(function () {
+			try {
+				$("#rte").kendoEditor({
+					tools: ["bold","italic","underline","strikethrough","separator","justifyLeft","justifyCenter","justifyRight","justifyFull","separator","insertUnorderedList","insertOrderedList","separator","indent","outdent","separator","createLink","unlink","separator","fontName","fontSize","separator","foreColor","backColor","separator","cleanFormatting","separator","viewHtml"],
+					resizable: { content: true, toolbar: false }
+				});
+			} catch (error) {
+				Alerta.TratamentoErroComLinha("UpsertPenalidade.cshtml", "kendoEditor.init", error);
+			}
+		})();
 	</script>
 }
